Fix: prevent zooming on input on IOS devices

--- a/src/components/CustomInput/CustomInput.pcss
+++ b/src/components/CustomInput/CustomInput.pcss
@@ -43,7 +43,7 @@
   font-size: 12px;
 
   input {
-    font-size: 14px;
+    font-size: 16px;
 
     &::placeholder {
       font-size: 14px;
