--- a/src/mobile/styles/components/CreateOrder.pcss
+++ b/src/mobile/styles/components/CreateOrder.pcss
@@ -335,7 +335,7 @@
                 align-items: center;
                 color: var(--primary-text-color);
                 display: flex;
-                font-size: 14px;
+                font-size: 16px;
                 font-weight: bold;
                 height: 35px;
                 justify-content: flex-start;
