--- a/src/mobile/styles/components/CreatedApiKeyModal.pcss
+++ b/src/mobile/styles/components/CreatedApiKeyModal.pcss
@@ -40,7 +40,7 @@
               }
 
               input {
-                font-size: 14px;
+                font-size: 16px;
                 font-weight: 500;
                 letter-spacing: 0.1px;
                 line-height: 22px;
